@@ -47,7 +47,6 @@
 #include <QProcess>
 #include <QDir>
 #include <QUrl>
-#include <QWhatsThis>
 
 // KDE includes
 
@@ -417,42 +416,6 @@ void DatabaseSettingsWidget::setupMainArea()
 
     // --------------------------------------------------------
 
-    d->ignoreDirectoriesBox                  = new QGroupBox(i18n("Ignore Directories"));
-    QGridLayout* ignoreDirectoriesLayout     = new QGridLayout(d->ignoreDirectoriesBox);
-
-    QLabel* const ignoreDirectoriesInfoLabel = new QLabel(i18n("<p>Set here the names of directories (case sensitive and separated by whitespaces) "
-                                                           "that you want to ignore from your photo collections.</p>"
-                                                           "<p>Useful is this for example, when you store your "
-                                                           "photos on a Synology NAS (Network Attached Storage). The system "
-                                                           "creates in every directory a subdirectory @eaDir to store "
-                                                           "thumbnails. To avoid that digiKam inserts the original photo "
-                                                           "and its corresponding thumbnail twice, @eaDir is ignored by default.</p>"
-                                                           "<p>To re-include directories that are ignored by default "
-                                                           "prefix it with a minus, e.g. -@eaDir.</p>"),
-                                                           d->ignoreDirectoriesBox);
-    ignoreDirectoriesInfoLabel->setWordWrap(true);
-
-    QLabel* const logoLabel1  = new QLabel(d->ignoreDirectoriesBox);
-    logoLabel1->setPixmap(QIcon::fromTheme(QLatin1String("folder")).pixmap(48));
-
-    d->ignoreDirectoriesLabel = new QLabel(d->ignoreDirectoriesBox);
-    d->ignoreDirectoriesLabel->setText(i18n("Additional directories to ignore (<a href='image'>Currently ignored directories</a>):"));
-
-    d->ignoreDirectoriesEdit  = new QLineEdit(d->ignoreDirectoriesBox);
-    d->ignoreDirectoriesEdit->setClearButtonEnabled(true);
-    d->ignoreDirectoriesEdit->setPlaceholderText(i18n("Enter directories that you want to ignore from adding to your collections."));
-    ignoreDirectoriesInfoLabel->setBuddy(d->ignoreDirectoriesEdit);
-
-    ignoreDirectoriesLayout->addWidget(ignoreDirectoriesInfoLabel, 0, 0, 1, 2);
-    ignoreDirectoriesLayout->addWidget(logoLabel1,                 1, 0, 2, 1);
-    ignoreDirectoriesLayout->addWidget(d->ignoreDirectoriesLabel,  1, 1, 1, 1);
-    ignoreDirectoriesLayout->addWidget(d->ignoreDirectoriesEdit,   2, 1, 1, 1);
-    ignoreDirectoriesLayout->setColumnStretch(1, 10);
-    ignoreDirectoriesLayout->setContentsMargins(spacing, spacing, spacing, spacing);
-    ignoreDirectoriesLayout->setSpacing(spacing);
-
-    // --------------------------------------------------------
-
     vlay->addWidget(typeHbox);
     vlay->addWidget(new DLineWidget(Qt::Horizontal));
     vlay->addWidget(d->dbPathLabel);
@@ -467,7 +430,6 @@ void DatabaseSettingsWidget::setupMainArea()
     layout->setContentsMargins(QMargins());
     layout->setSpacing(spacing);
     layout->addWidget(dbConfigBox);
-    layout->addWidget(d->ignoreDirectoriesBox);
     layout->addStretch();
 
     // --------------------------------------------------------
@@ -493,31 +455,7 @@ void DatabaseSettingsWidget::setupMainArea()
     connect(d->userName, SIGNAL(textChanged(QString)),
             this, SLOT(slotUpdateSqlInit()));
 
-    connect(d->ignoreDirectoriesLabel, SIGNAL(linkActivated(QString)),
-            this, SLOT(slotShowCurrentIgnoredDirectoriesSettings()));
-
     slotHandleDBTypeIndexChanged(d->dbType->currentIndex());
-}
-
-void DatabaseSettingsWidget::applySettings()
-{
-    QString ignoreDirectory;
-    CoreDbAccess().db()->getUserIgnoreDirectoryFilterSettings(&ignoreDirectory);
-
-    if (d->ignoreDirectoriesEdit->text() != ignoreDirectory)
-    {
-        CoreDbAccess().db()->setUserIgnoreDirectoryFilterSettings(d->ignoreDirectoriesEdit->text());
-
-        ScanController::instance()->completeCollectionScanInBackground(false);
-    }
-}
-
-void DatabaseSettingsWidget::readSettings()
-{
-    QString ignoreDirectory;
-    CoreDbAccess().db()->getUserIgnoreDirectoryFilterSettings(&ignoreDirectory);
-
-    d->ignoreDirectoriesEdit->setText(ignoreDirectory);
 }
 
 int DatabaseSettingsWidget::databaseType() const
@@ -856,16 +794,6 @@ void DatabaseSettingsWidget::slotDatabasePathEdited()
 #endif
 
     d->dbPathEdit->setFileDlgPath(newPath);
-}
-
-void DatabaseSettingsWidget::slotShowCurrentIgnoredDirectoriesSettings()
-{
-    QStringList ignoreDirectoryList;
-    CoreDbAccess().db()->getIgnoreDirectoryFilterSettings(&ignoreDirectoryList);
-    QString text = i18n("<p>Directories starting with a dot will be already ignored "
-                        "and its content will be excluded from the database. For example:<br/> <code>%1</code></p>",
-                        ignoreDirectoryList.join(QLatin1String(" ")));
-    QWhatsThis::showText(d->ignoreDirectoriesLabel->mapToGlobal(QPoint(0, 0)), text, d->ignoreDirectoriesLabel);
 }
 
 bool DatabaseSettingsWidget::checkDatabaseSettings()
