@@ -47,6 +47,7 @@
 #include <QUrl>
 #include <QIcon>
 #include <QMessageBox>
+#include <QWhatsThis>
 
 // KDE includes
 
@@ -73,62 +74,95 @@ public:
     Private() :
         databaseWidget(0),
         updateBox(0),
-        hashesButton(0)
+        hashesButton(0),
+        ignoreEdit(0),
+        ignoreLabel(0)
     {
     }
 
     DatabaseSettingsWidget* databaseWidget;
     QGroupBox*              updateBox;
     QPushButton*            hashesButton;
+    QLineEdit*              ignoreEdit;
+    QLabel*                 ignoreLabel;
 };
 
 SetupDatabase::SetupDatabase(QWidget* const parent)
     : QScrollArea(parent),
       d(new Private)
 {
-    QWidget* const page     = new QWidget;
-    QVBoxLayout* mainLayout = new QVBoxLayout;
+    QTabWidget* tab = new QTabWidget(viewport());
+    setWidget(tab);
+    setWidgetResizable(true);
 
-    d->databaseWidget       = new DatabaseSettingsWidget;
-    mainLayout->addWidget(d->databaseWidget);
+    // --------------------------------------------------------
+
+    QWidget* const settingsPanel = new QWidget(tab);
+    QVBoxLayout* settingsLayout  = new QVBoxLayout(settingsPanel);
+
+    d->databaseWidget = new DatabaseSettingsWidget;
+    settingsLayout->addWidget(d->databaseWidget);
 
     if (!CoreDbSchemaUpdater::isUniqueHashUpToDate())
     {
-        d->updateBox                    = new QGroupBox(i18nc("@title:group", "Updates"));
-        QGridLayout* const updateLayout = new QGridLayout;
-
-        d->hashesButton                 = new QPushButton(i18nc("@action:button", "Update File Hashes"));
-        d->hashesButton->setWhatsThis(i18nc("@info:tooltip",
-                                            "<qt>File hashes are used to identify identical files and to display thumbnails. "
-                                            "A new, improved algorithm to create the hash is now used. "
-                                            "The old algorithm, though, still works quite well, so it is recommended to "
-                                            "carry out this upgrade, but not required.<br> "
-                                            "After the upgrade you cannot use your database with a digiKam version "
-                                            "prior to 2.0.</qt>"));
-
-        QPushButton* const infoHash     = new QPushButton;
-        infoHash->setIcon(QIcon::fromTheme(QLatin1String("dialog-information")));
-        infoHash->setToolTip(i18nc("@info:tooltip", "Get information about <interface>Update File Hashes</interface>"));
-
-        updateLayout->addWidget(d->hashesButton, 0, 0);
-        updateLayout->addWidget(infoHash,        0, 1);
-        updateLayout->setColumnStretch(2, 1);
-
-        d->updateBox->setLayout(updateLayout);
-
-        mainLayout->addStretch(10);
-        mainLayout->addWidget(d->updateBox);
-
-        connect(d->hashesButton, SIGNAL(clicked()),
-                this, SLOT(upgradeUniqueHashes()));
-
-        connect(infoHash, SIGNAL(clicked()),
-                this, SLOT(showHashInformation()));
+        createUpdateBox();
+        settingsLayout->addStretch(10);
+        settingsLayout->addWidget(d->updateBox);
     }
 
-    page->setLayout(mainLayout);
-    setWidget(page);
-    setWidgetResizable(true);
+    tab->insertTab(DbSettings, settingsPanel, i18nc("@title:tab", "Database Settings"));
+
+    // --------------------------------------------------------
+
+    QWidget* const ignorePanel = new QWidget(tab);
+    QGridLayout* ignoreLayout    = new QGridLayout(ignorePanel);
+
+    QLabel* const ignoreInfoLabel = new QLabel(
+                i18n("<p>Set the names of directories that you want to ignore "
+                     "from your photo collections. The names are case sensitive "
+                     "and should be separated by a whitespace.</p>"
+                     "<p>This is for example useful when you store your photos "
+                     "on a Synology NAS (Network Attached Storage). In every "
+                     "directory the system creates a subdirectory @eaDir to "
+                     "store thumbnails. To avoid digiKam inserting the original "
+                     "photo and its corresponding thumbnail twice, @eaDir is "
+                     "ignored by default.</p>"
+                     "<p>To re-include directories that are ignored by default "
+                     "prefix it with a minus, e.g. -@eaDir.</p>"),
+                ignorePanel);
+    ignoreInfoLabel->setWordWrap(true);
+
+    QLabel* const logoLabel1 = new QLabel(ignorePanel);
+    logoLabel1->setPixmap(QIcon::fromTheme(QLatin1String("folder")).pixmap(48));
+
+    d->ignoreLabel = new QLabel(ignorePanel);
+    d->ignoreLabel->setText(i18n("Additional directories to ignore "
+                                 "(<a href='image'>Currently ignored directories</a>):"));
+
+    d->ignoreEdit = new QLineEdit(ignorePanel);
+    d->ignoreEdit->setClearButtonEnabled(true);
+    d->ignoreEdit->setPlaceholderText(i18n("Enter directories that you want to "
+                                           "ignore from adding to your collections."));
+    ignoreInfoLabel->setBuddy(d->ignoreEdit);
+
+    int row = 0;
+    ignoreLayout->addWidget(ignoreInfoLabel, row, 0, 1, 2);
+    row++;
+    ignoreLayout->addWidget(logoLabel1,      row, 0, 2, 1);
+    ignoreLayout->addWidget(d->ignoreLabel,  row, 1, 1, 1);
+    row++;
+    ignoreLayout->addWidget(d->ignoreEdit,   row, 1, 1, 1);
+    row++;
+    ignoreLayout->setColumnStretch(1, 10);
+    ignoreLayout->setRowStretch(row, 10);
+    const int spacing = QApplication::style()->pixelMetric(QStyle::PM_DefaultLayoutSpacing);
+    ignoreLayout->setContentsMargins(spacing, spacing, spacing, spacing);
+    ignoreLayout->setSpacing(spacing);
+
+    connect(d->ignoreLabel, SIGNAL(linkActivated(QString)),
+            this, SLOT(slotShowCurrentIgnoredDirectoriesSettings()));
+
+    tab->insertTab(IgnoreDirs, ignorePanel, i18nc("@title:tab", "Ignored Directories"));
 
     // --------------------------------------------------------
 
@@ -150,7 +184,14 @@ void SetupDatabase::applySettings()
         return;
     }
 
-    d->databaseWidget->applySettings();
+    QString ignoreDirectory;
+    CoreDbAccess().db()->getUserIgnoreDirectoryFilterSettings(&ignoreDirectory);
+    if (d->ignoreEdit->text() != ignoreDirectory)
+    {
+        CoreDbAccess().db()->setUserIgnoreDirectoryFilterSettings(d->ignoreEdit->text());
+
+        ScanController::instance()->completeCollectionScanInBackground(false);
+    }
 
     if (d->databaseWidget->getDbEngineParameters() == d->databaseWidget->orgDatabasePrm())
     {
@@ -205,7 +246,9 @@ void SetupDatabase::readSettings()
         return;
     }
 
-    d->databaseWidget->readSettings();
+    QString ignoreDirectory;
+    CoreDbAccess().db()->getUserIgnoreDirectoryFilterSettings(&ignoreDirectory);
+    d->ignoreEdit->setText(ignoreDirectory);
 
     d->databaseWidget->setParametersFromSettings(settings);
 }
@@ -227,9 +270,51 @@ void SetupDatabase::upgradeUniqueHashes()
     }
 }
 
+void SetupDatabase::createUpdateBox()
+{
+    d->updateBox                    = new QGroupBox(i18nc("@title:group", "Updates"));
+    QGridLayout* const updateLayout = new QGridLayout;
+
+    d->hashesButton                 = new QPushButton(i18nc("@action:button", "Update File Hashes"));
+    d->hashesButton->setWhatsThis(i18nc("@info:tooltip",
+                                        "<qt>File hashes are used to identify identical files and to display thumbnails. "
+                                        "A new, improved algorithm to create the hash is now used. "
+                                        "The old algorithm, though, still works quite well, so it is recommended to "
+                                        "carry out this upgrade, but not required.<br> "
+                                        "After the upgrade you cannot use your database with a digiKam version "
+                                        "prior to 2.0.</qt>"));
+
+    QPushButton* const infoHash     = new QPushButton;
+    infoHash->setIcon(QIcon::fromTheme(QLatin1String("dialog-information")));
+    infoHash->setToolTip(i18nc("@info:tooltip", "Get information about <interface>Update File Hashes</interface>"));
+
+    updateLayout->addWidget(d->hashesButton, 0, 0);
+    updateLayout->addWidget(infoHash,        0, 1);
+    updateLayout->setColumnStretch(2, 1);
+
+    d->updateBox->setLayout(updateLayout);
+
+    connect(d->hashesButton, SIGNAL(clicked()),
+            this, SLOT(upgradeUniqueHashes()));
+
+    connect(infoHash, SIGNAL(clicked()),
+            this, SLOT(showHashInformation()));
+}
+
 void SetupDatabase::showHashInformation()
 {
     qApp->postEvent(d->hashesButton, new QHelpEvent(QEvent::WhatsThis, QPoint(0, 0), QCursor::pos()));
 }
+
+void SetupDatabase::slotShowCurrentIgnoredDirectoriesSettings() const
+{
+    QStringList ignoreDirectoryList;
+    CoreDbAccess().db()->getIgnoreDirectoryFilterSettings(&ignoreDirectoryList);
+    QString text = i18n("<p>Directories starting with a dot are ignored by "
+                        "default.<br/> <code>%1</code></p>",
+                        ignoreDirectoryList.join(QLatin1String(" ")));
+    QWhatsThis::showText(d->ignoreLabel->mapToGlobal(QPoint(0, 0)), text, d->ignoreLabel);
+}
+
 
 } // namespace Digikam
